# shapefile-linter

./: .gitignore  0-0.geolinechunk  Cargo.toml  LICENSE  README.md  chunkify  chunks.info  chunks.polyinfo  clean  geoboi  height  heightlines_errors  kmzxtrctr  merge_heightmaps  outp  river  styles  test  wrong  zipchunks
.github/workflows/: rust.yml
chunks/: geolinestyles
data/: river.shp
devscripts/: lint_heightmaps  merge_heightmaps
docs/: chunks-specs  general-specs  geoline-chunks-specs  geopoly-chunks-specs  height-chunks-specs  heightmap-specs  polygonz-specs  usage.md
src/: chunkify.rs  compress.rs  convert.rs  data.rs  info.rs  kml.rs  logger.rs  main.rs  triangulate.rs
