[package]
name = "shapefile-linter"
version = "0.1.0"
authors = ["Cody Bloemhard <cblmhrd@live.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapp = "0.4.0"
shapefile = "0.2.0"
bin_buffer = "0.1.11"
dlv-list = "0.2.2"
xml-rs = "0.8"
