[package]
name = "shapefile-linter"
version = "0.1.0"
authors = ["Cody Bloemhard <codybloemhard@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapp = "0.4.0"
shapefile = "0.2.0"
bin_buffer = "0.1.11"
dlv-list = "0.2.2"
xml-rs = "0.8"
hex = "0.4.2"
ass = "1.1.0"
